/global - dropdown menu visibility bug fix

--- a/public/global/default.css
+++ b/public/global/default.css
@@ -121,7 +121,7 @@ header{
     flex-direction: column;
     background-color: rgb(255, 255, 255);
 
-    visibility: visible;
+    visibility: hidden;
     transition: opacity 0.25s linear;
 
     z-index: 100;
